--- a/views/index.slim
+++ b/views/index.slim
@@ -1,18 +1,31 @@
 .container
-  .col-md-10.col-md-offset-1
-    h1 Class Namr
 
-    form action='/suggestions' method='post'
-      label for='keyword' Keywords
-      br/
-      textarea id='keyword' name='keyword' cols="50"
-      br/
+  .row
+    .col-md-12
+      h1 Having Trouble Naming Your Class?
 
-      label for='role' Class Role
+  #content
+    form action='/suggestions' method='post' role="form"
+      .row
+        .col-md-4.col-md-offset-2
+          .well
+            .form-group
+              h2
+                label for='keyword' 1. Domain Keyword
+              input.form-control type='text' id='keyword' name='keyword' placeholder="Widget" 
 
-      - ClassType.roles.each do |role|
-        label
-          input type='radio' name='role' value=role
-            = role
+        .col-md-4
+          .well
+            .form-group
+              h2
+                label for='role' 2. Class Role
 
-      input type='submit'
+              #role-options
+                - ClassType.roles.each do |role|
+                  label
+                    input type='radio' name='role' value=role
+                      = role
+
+      .row
+        #submit.col-md-8.col-md-offset-2
+          input.btn.btn-primary.btn-lg.btn-block type='submit'
