--- a/views/layout.slim
+++ b/views/layout.slim
@@ -8,16 +8,16 @@ html.no-js
   head
     meta charset="utf-8"
     meta content="IE=edge" http-equiv="X-UA-Compatible"
-    title Class Namr
+    title Nominate.io - Helping You Choose Better Class Names Since 2013
     meta content="" name="description"
-    meta content="width=(device-width,)initial-scale=1" name="viewport"
+    meta content="width=device-width, initial-scale=1" name="viewport"
     /! Place favicon.ico and apple-touch-icon.png in the root directory
     link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"
+    link rel="stylesheet" href="/stylesheets/application.css"
 
-    script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"
   body
     /![if lt IE 7]
-      | <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     
     / nav class="navbar navbar-default" role="navigation"
     /   div class="navbar-header"
@@ -27,15 +27,17 @@ html.no-js
     /       li
     /         a Home
 
-    == yield
+    #wrapper
+      == yield
 
     script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"
+    script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"
     javascript:
-      | window.jQuery || document.write('<\/script>')
+      // window.jQuery || document.write('<\/script>')
   
-      | (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-      | function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-      | e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-      | e.src='//www.google-analytics.com/analytics.js';
-      | r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      | ga('create','UA-XXXXX-X');ga('send','pageview');
+      // (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+      // function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+      // e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+      // e.src='//www.google-analytics.com/analytics.js';
+      // r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+      // ga('create','UA-XXXXX-X');ga('send','pageview');
