--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -37,11 +37,16 @@ body
   background: url(/images/graphy.png)
 
 #wrapper
-  background: url(/images/nominate-watermark.png) no-repeat center 35px
+  background: url(/images/nominate-watermark.png) no-repeat center 375px
   margin-top: 60px
+  position: absolute
+  top: 0
+  bottom: 0
+  left: 0
+  right: 0
 
 #content
-  margin-top: 120px
+  margin-top: 45px
 
 input#keyword
   height: auto
