Styling and UI changes for homepage and form

--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -28,16 +28,15 @@ h1
   text-align: center
   font-size: 50px
 
-
 // 
 // Layout
 // 
 
 body
-  background: url(/images/graphy.png)
+  background: url(/images/old_mathematics.png)
 
 #wrapper
-  background: url(/images/nominate-watermark.png) no-repeat center 375px
+  background: url(/images/nominate-watermark.png) no-repeat center 100px
   margin-top: 60px
   position: absolute
   top: 0
@@ -46,11 +45,11 @@ body
   right: 0
 
 #content
-  margin-top: 45px
+  margin-top: 25px
 
 input#keyword
   height: auto
-  font-size: 30px
+  font-size: 20px
   width: 100%
 
 #role-options
@@ -62,4 +61,14 @@ input#keyword
       margin-right: 4px
 
 #submit
-  margin-top: 50px
+  margin-bottom: 50px
+
+#quote
+  margin-top: 20px
+
+form .row
+  :margin-top 30px
+
+header, footer
+  background-color: #333
+  color: #ccc
