More descriptive title

--- a/views/layout.slim
+++ b/views/layout.slim
@@ -8,7 +8,7 @@ html.no-js
   head
     meta charset="utf-8"
     meta content="IE=edge" http-equiv="X-UA-Compatible"
-    title Nominate.io - Helping You Choose Better Class Names Since 2013
+    title Nominate better class names for better software
     meta content="" name="description"
     meta content="width=device-width, initial-scale=1" name="viewport"
     /! Place favicon.ico and apple-touch-icon.png in the root directory
