--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -54,6 +54,7 @@ input#keyword
 
 #role-options
   font-size: 20px
+  overflow: hidden
 
   label 
     margin-right: 20px
@@ -72,3 +73,11 @@ form .row
 header, footer
   background-color: #333
   color: #ccc
+
+ul
+  list-style-type: none
+  padding-left: 0
+  li 
+    float: left
+    display: inline-block
+    width: 30%
