Styling for suggestions page

--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -81,3 +81,18 @@ ul
     float: left
     display: inline-block
     width: 30%
+
+.try-again
+  :margin 40px 0
+
+.nominations li
+  font-size: 16px
+  margin-bottom: 16px
+  height: 22px
+
+  &:hover
+    // cursor: pointer
+    font-weight: bold
+    span
+      font-size: 20px
+      position: relative
