--- a/views/layout.slim
+++ b/views/layout.slim
@@ -53,8 +53,9 @@ html.no-js
     script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"
     script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"
     javascript:
-      // window.jQuery || document.write('<\/script>')
-  
+
+      window.jQuery || document.write('<\/script>')
+
       // (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
       // function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
       // e=o.createElement(i);r=o.getElementsByTagName(i)[0];
