--- a/views/suggestion.slim
+++ b/views/suggestion.slim
@@ -19,4 +19,4 @@
         
 
       .try-again
-        a.btn.btn-default.btn-lg.btn-success href='/' Try something else
+        a.btn.btn-default.btn-lg.btn-success href='/' Nominate something else
