--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -37,7 +37,7 @@ body
 
 #wrapper
   background: url(/images/nominate-watermark.png) no-repeat center 100px
-  margin-top: 60px
+  margin-top: 80px
   position: absolute
   top: 0
   bottom: 0
@@ -67,12 +67,20 @@ input#keyword
 #quote
   margin-top: 20px
 
+blockquote
+  border-left: 5px solid #999
+  margin-top: 15px
+
 form .row
   :margin-top 30px
 
 header, footer
   background-color: #333
   color: #ccc
+
+header
+  padding-top: 10px
+  word-spacing 1px
 
 ul
   list-style-type: none
