And yet, more styling tweaks for the layout

--- a/views/index.slim
+++ b/views/index.slim
@@ -12,7 +12,7 @@
           .form-group
             h2
               label for='keyword' 1. Provide a single <b>Domain Keyword</b>
-            input.form-control type='text' id='keyword' name='keyword' required=nil placeholder="examples: Widget, User, Apple Pie, Twitter"
+            input.form-control type='text' id='keyword' name='keyword' required=true placeholder="examples: Widget, User, Apple Pie, Twitter"
 
       .row
         .col-md-8.col-md-offset-2
