--- a/views/layout.slim
+++ b/views/layout.slim
@@ -8,7 +8,7 @@ html.no-js
   head
     meta charset="utf-8"
     meta content="IE=edge" http-equiv="X-UA-Compatible"
-    title Nominate better class names for better software
+    title Nominate better class names for more readable software
     meta content="" name="description"
     meta content="width=device-width, initial-scale=1" name="viewport"
     /! Place favicon.ico and apple-touch-icon.png in the root directory
@@ -32,7 +32,7 @@ html.no-js
       .container
         .row
           .col-md-10.col-md-offset-1
-            p <b>Nominate.io</b>: Software Class Name Generator. <b>Naming things is hard</b>, clip this to your toolbelt.
+            p <b><a href="/">Nominate.io</a></b>: Software Class Name Generator. <b>Naming things is hard</b>, clip this to your toolbelt.
 
     #wrapper
       == yield
@@ -51,6 +51,12 @@ html.no-js
           .col-md-8.col-md-offset-2
             p.lead
               | Made with <i class="icon-heart"></i> by <a href="http://twitter.com/ccurtisj" target="blank">@ccurtisj</a>
+            p 
+              | Built using 
+              | <a target="blank" href="https://www.ruby-lang.org/">Ruby</a>, 
+              | <a target="blank" href="http://www.sinatrarb.com/">Sinatra</a>, 
+              | <a target="blank" href="http://getbootstrap.com/">Twitter Bootstrap</a>, 
+              | and The <a href="http://words.bighugelabs.com/api.php" target="blank">BigHugeThesaurus</a> Api
 
     script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"
     script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"
