--- a/views/suggestion.slim
+++ b/views/suggestion.slim
@@ -4,7 +4,7 @@
 
       - if @suggestions.any?
         
-        h1 Nominations
+        h1 Class Name Nominations
         p.lead Let's see if any of these work for you
 
         .well style="overflow:hidden;"
