--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -69,7 +69,6 @@ input#keyword
 
 blockquote
   border-left: 5px solid #999
-  margin-top: 15px
 
 form .row
   :margin-top 30px
@@ -81,6 +80,10 @@ header, footer
 header
   padding-top: 10px
   word-spacing 1px
+
+footer
+  padding-top: 15px
+  padding-bottom: 30px
 
 ul
   list-style-type: none
