--- a/views/index.slim
+++ b/views/index.slim
@@ -1,8 +1,9 @@
 .container
 
-  .row
-    .col-md-12
-      h1 Having Trouble Naming Your Class?
+  .visible-md
+    .row
+      .col-md-12
+        h1 Having Trouble Naming Your Class?
 
 
   #content
