--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -93,6 +93,14 @@ ul
     display: inline-block
     width: 30%
 
+@media(max-width:1200px)
+  ul li
+    width: 50%
+
+@media(max-width:480px)
+  ul li
+    width: 100%
+
 .try-again
   :margin 40px 0
 
