--- a/views/layout.slim
+++ b/views/layout.slim
@@ -8,8 +8,8 @@ html.no-js
   head
     meta charset="utf-8"
     meta content="IE=edge" http-equiv="X-UA-Compatible"
-    title Nominate better class names for more readable software
-    meta content="" name="description"
+    title Nominate generates better class names for more readable software
+    meta content="Don't know what to name your new class? Nominate can help" name="description"
     meta content="width=device-width, initial-scale=1" name="viewport"
     /! Place favicon.ico and apple-touch-icon.png in the root directory
     link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"
