--- a/views/suggestion.slim
+++ b/views/suggestion.slim
@@ -3,20 +3,21 @@
     .col-md-10.col-md-offset-1
 
       - if @suggestions.any?
-        
+
         h1 Class Name Nominations
         p.lead Let's see if any of these work for you
 
-        .well style="overflow:hidden;"
-          ul.nominations
-            - @suggestions.each do |suggestion|
-              li
-                span= suggestion
-        
-      
+        - @suggestions.each do |suggestion_set|
+          .well style="overflow:hidden;"
+            ul.nominations
+              - suggestion_set.sort.each do |suggestion|
+                li
+                  span= suggestion
+
+
       - else
         h1 Sorry, I got nothin'
-        
+
 
       .try-again
         a.btn.btn-default.btn-lg.btn-success href='/' Nominate something else
