--- a/views/layout.slim
+++ b/views/layout.slim
@@ -19,7 +19,7 @@ html.no-js
   body
     /![if lt IE 7]
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    
+
     / nav class="navbar navbar-default" role="navigation"
     /   div class="navbar-header"
     /     a class="navbar-brand" href="#" Class Namr
@@ -51,18 +51,18 @@ html.no-js
           .col-md-8.col-md-offset-2
             p.lead
               | Made with <i class="icon-heart"></i> by <a href="http://twitter.com/ccurtisj" target="blank">@ccurtisj</a>
-            p 
-              | Built using 
-              | <a target="blank" href="https://www.ruby-lang.org/">Ruby</a>, 
-              | <a target="blank" href="http://www.sinatrarb.com/">Sinatra</a>, 
-              | <a target="blank" href="http://getbootstrap.com/">Twitter Bootstrap</a>, 
+            p
+              | Built using
+              | <a target="blank" href="https://www.ruby-lang.org/">Ruby</a>,
+              | <a target="blank" href="http://www.sinatrarb.com/">Sinatra</a>,
+              | <a target="blank" href="http://getbootstrap.com/">Twitter Bootstrap</a>,
               | and The <a href="http://words.bighugelabs.com/api.php" target="blank">BigHugeThesaurus</a> Api
 
     script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"
     script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"
     javascript:
 
-      window.jQuery || document.write('<\/script>')
+      window.jQuery || document.write('<\/script>');
 
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
